tests/baselines/reference/parserTypeQuery8.errors.txt
tests/cases/conformance/parser/ecmascript5/Types/parserTypeQuery8.ts(1,15): error TS2304: Cannot find name 'A'.
tests/cases/conformance/parser/ecmascript5/Types/parserTypeQuery8.ts(1,16): error TS1005: ',' expected.
tests/cases/conformance/parser/ecmascript5/Types/parserTypeQuery8.ts(1,17): error TS2304: Cannot find name 'B'.
tests/cases/conformance/parser/ecmascript5/Types/parserTypeQuery8.ts(1,19): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/Types/parserTypeQuery8.ts (4 errors) ====
    var v: typeof A<B>
                  ~
!!! error TS2304: Cannot find name 'A'.
                   ~
!!! error TS1005: ',' expected.
                    ~
!!! error TS2304: Cannot find name 'B'.
                      
!!! error TS1109: Expression expected.